--- a/src/new-entry.html
+++ b/src/new-entry.html
@@ -20,7 +20,7 @@
                                                 New entries allow you to share your knowledge of Kytherian history or discover more about your Kytherian heritage. Select a category and up to two subcategories to classify your entry. For best practices on links and image uploads, view our <a href="#" class="paragraf-link">Entry Best Practices</a> in the Help section.
                                             </p>
                                         </div>
-                                        <form action="#" class="entry-content__form upload-form" id="upload-new-entry">
+                                        <form action="#" class="entry-content__form upload-form" id="upload-new-entry-form">
                                             <div class="upload-form__row row-flex">
                                                 <div class="upload-form__select select-form">
                                                     <div class="select-form__field">
@@ -62,13 +62,13 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <div class="upload-form__row drag-drop">
+                                            <div class="upload-form__row drag-drop" data-files="image">
                                                 <div class="upload-form__instruction">
                                                     <span>Upload Photos</span> 3 photos max, 800 px minimum width, jpg/png/tiff accepted
                                                 </div>
                                                 <div class="drag-drop__field">
-                                                    <input type="file" class="drop-files-input" id="drop-image-input" multiple>
-                                                    <label for="drop-image-input" class="drag-drop__box" id="image-dropbox">
+                                                    <input type="file" class="drop-files-input" id="image-file-input" accept="image/png, image/jpg, image/jpeg, image/tiff, image/webp" multiple>
+                                                    <label for="image-file-input" class="drag-drop__box" id="image-dropbox">
                                                         <p class="drag-drop__placeholder">Drag and Drop Photos or Click Box to Upload From Computer</p>
                                                     </label>
                                                 </div>
@@ -94,14 +94,17 @@
                                                     <textarea name="caption" id="caption" placeholder="Enter Text…"></textarea>
                                                 </div>
                                             </div>
-                                            <div class="upload-form__row drag-drop">
+                                            <div class="upload-form__row drag-drop" data-files="media">
                                                 <div class="upload-form__instruction">
                                                     <span>Upload Files</span> For Video & Audio Files, 5mb max
                                                 </div>
                                                 <div class="drag-drop__field">
-                                                    <p class="drag-drop__placeholder">Drag and Drop Photos or Click Box to Upload From Computer</p>
-                                                    <div class="drag-drop__box"></div>
+                                                    <input type="file" class="drop-files-input" id="media-file-input" data-size-Mb="5" accept="video/mp4" multiple>
+                                                    <label for="media-file-input" class="drag-drop__box" id="image-dropbox">
+                                                        <p class="drag-drop__placeholder">Drag and Drop or Click Box to Upload From Computer</p>
+                                                    </label>
                                                 </div>
+                                                <ul class="drag-drop__downloaded list-files"></ul>
                                             </div>
                                             <div class="upload-form__footer form-buttons">
                                                 <button class="form-buttons__submit form-btn" type="submit">Preview</button>
