--- a/src/new-entry.html
+++ b/src/new-entry.html
@@ -91,15 +91,15 @@
                                             <div class="upload-form__row entry-text">
                                                 <div class="upload-form__label">Entry Text/Caption</div>
                                                 <div class="entry-text__field">
-                                                    <textarea name="caption" id="caption" placeholder="Enter Text…"></textarea>
+                                                    <textarea name="textarea" id="caption" placeholder="Enter Text…"></textarea>
                                                 </div>
                                             </div>
                                             <div class="upload-form__row drag-drop" data-files="media">
                                                 <div class="upload-form__instruction">
-                                                    <span>Upload Files</span> For Video & Audio Files, 5mb max
+                                                    <span>Upload Files</span> For Video & Audio Files, 10mb max
                                                 </div>
                                                 <div class="drag-drop__field">
-                                                    <input type="file" class="drop-files-input" id="media-file-input" data-size-Mb="5" accept="video/mp4" multiple>
+                                                    <input type="file" class="drop-files-input" id="media-file-input" data-size-Mb="10" accept="video/mp4, audio/mpeg" multiple>
                                                     <label for="media-file-input" class="drag-drop__box" id="image-dropbox">
                                                         <p class="drag-drop__placeholder">Drag and Drop or Click Box to Upload From Computer</p>
                                                     </label>
