--- a/src/html/_aside-profile.htm
+++ b/src/html/_aside-profile.htm
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li class="aside__item">
-                <a href="entry-preview.html" class="aside__title">
+                <a href="new-entry.html" class="aside__title">
                     Upload New Entry
                     <span></span>
                 </a>
